[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Assets/Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Gui/HUD.gd" type="Script" id=2]
[ext_resource path="res://src/Assets/Fonts/KennyFuturFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/Assets/Sprites/Gui/Aiguille.png" type="Texture" id=4]
[ext_resource path="res://src/Assets/Sprites/Gui/Compteur.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=7]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainVBoxContainer/DifContainer/Dif_chrono:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainVBoxContainer/DifContainer/Dif_chrono:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainVBoxContainer/LapTimeContainer/HBoxContainer/lap_time:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainVBoxContainer/LapTimeContainer/HBoxContainer/lap_time:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MainVBoxContainer/DifContainer/Dif_chrono:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BeginCounterContainer/Begin_counter:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BeginCounterContainer/Begin_counter:custom_fonts/font:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 64 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainVBoxContainer/LapTimeContainer/HBoxContainer/lap_time:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("MainVBoxContainer/VBoxContainer2/Begin_counter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainVBoxContainer/VBoxContainer2/Begin_counter:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 64, 200 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainVBoxContainer/VBoxContainer2/Begin_counter:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BeginCounterContainer/Begin_counter:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BeginCounterContainer/Begin_counter:custom_fonts/font:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 64, 200 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BeginCounterContainer/Begin_counter:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MainContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = 15.0
custom_constants/margin_right = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainVBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_right = 1003.0
margin_bottom = 585.0

[node name="CurrentContainer" type="HBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_right = 1003.0
margin_bottom = 18.0

[node name="Label" type="Label" parent="MainContainer/MainVBoxContainer/CurrentContainer"]
margin_right = 48.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "Lap :"

[node name="current_time" type="Label" parent="MainContainer/MainVBoxContainer/CurrentContainer"]
margin_left = 52.0
margin_right = 85.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "100"

[node name="BestContainer" type="HBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_top = 22.0
margin_right = 1003.0
margin_bottom = 43.0

[node name="Label" type="Label" parent="MainContainer/MainVBoxContainer/BestContainer"]
margin_top = 1.0
margin_right = 57.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Best:"

[node name="best_time" type="Label" parent="MainContainer/MainVBoxContainer/BestContainer"]
margin_left = 61.0
margin_right = 99.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 4 )
text = "100"

[node name="LapCountContainer" type="HBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_top = 47.0
margin_right = 1003.0
margin_bottom = 65.0

[node name="Lap" type="Label" parent="MainContainer/MainVBoxContainer/LapCountContainer"]
margin_right = 39.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
text = "lap"

[node name="lap_count" type="Label" parent="MainContainer/MainVBoxContainer/LapCountContainer"]
margin_left = 43.0
margin_right = 78.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
text = "1 / 4"

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_top = 69.0
margin_right = 1003.0
margin_bottom = 173.0
size_flags_vertical = 3

[node name="LapTimeContainer" type="VBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_top = 177.0
margin_right = 1003.0
margin_bottom = 177.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/MainVBoxContainer/LapTimeContainer"]
margin_right = 1003.0
alignment = 1

[node name="lap_time" type="Label" parent="MainContainer/MainVBoxContainer/LapTimeContainer/HBoxContainer"]
visible = false
margin_left = 400.0
margin_right = 602.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 3 )
text = "00 : 03 : 34"

[node name="DifContainer" type="VBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_top = 181.0
margin_right = 1003.0
margin_bottom = 181.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dif_chrono" type="Label" parent="MainContainer/MainVBoxContainer/DifContainer"]
visible = false
margin_right = 1003.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 6 )
text = "00 : 00 : 00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="MainContainer/MainVBoxContainer"]
margin_top = 185.0
margin_right = 1003.0
margin_bottom = 585.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainContainer"]
autoplay = "Init"
anims/Dif_chrono = SubResource( 7 )
anims/Init = SubResource( 8 )
anims/Show_counter = SubResource( 9 )

[node name="BeginCounterContainer" type="VBoxContainer" parent="MainContainer"]
margin_right = 1003.0
margin_bottom = 585.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Begin_counter" type="Label" parent="MainContainer/BeginCounterContainer"]
margin_top = 256.0
margin_right = 1003.0
margin_bottom = 328.0
custom_fonts/font = SubResource( 10 )
text = "abc"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aiguille" type="Sprite" parent="MarginContainer"]
position = Vector2( 514.346, 218.669 )
rotation = -1.5708
scale = Vector2( 0.65191, 0.623312 )
texture = ExtResource( 4 )
offset = Vector2( 0, -50 )

[node name="Compteur" type="Sprite" parent="MarginContainer"]
position = Vector2( 513.748, 145.66 )
scale = Vector2( 1.20094, 1.20094 )
texture = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
